[gd_scene load_steps=10 format=2]

[ext_resource path="res://MiniGames/GuessWhichHand/270b.svg" type="Texture" id=1]
[ext_resource path="res://MiniGames/GuessWhichHand/Game.gd" type="Script" id=2]
[ext_resource path="res://MiniGames/GuessWhichHand/270a.svg" type="Texture" id=3]

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 360, 360 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 360, 360 )
modulate_color = Color( 0.588235, 0.588235, 0.588235, 1 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 360, 360 )
modulate_color = Color( 0.901961, 0.901961, 0.901961, 1 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 360, 360 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 360, 360 )
modulate_color = Color( 0.588235, 0.588235, 0.588235, 1 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 360, 360 )
modulate_color = Color( 0.901961, 0.901961, 0.901961, 1 )

[node name="GuessWhichGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Player1Input" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Player1Hand1" type="Button" parent="Player1Input"]
margin_left = 61.0
margin_top = 170.0
margin_right = 421.0
margin_bottom = 530.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )

[node name="Player1Hand2" type="Button" parent="Player1Input"]
margin_left = 960.0
margin_top = 163.0
margin_right = 1320.0
margin_bottom = 523.0
rect_scale = Vector2( -1, 1 )
focus_mode = 0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )

[node name="Label" type="Label" parent="Player1Input"]
anchor_right = 1.0
margin_bottom = 83.0
text = "Player 1: Select a Hand"
align = 1
valign = 1

[node name="Player2Input" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Player2Hand1" type="Button" parent="Player2Input"]
margin_left = 61.0
margin_top = 170.0
margin_right = 421.0
margin_bottom = 530.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 5 )

[node name="Player2Hand2" type="Button" parent="Player2Input"]
margin_left = 960.0
margin_top = 163.0
margin_right = 1320.0
margin_bottom = 523.0
rect_scale = Vector2( -1, 1 )
focus_mode = 0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 5 )

[node name="Label" type="Label" parent="Player2Input"]
anchor_right = 1.0
margin_bottom = 83.0
text = "Player 2: Select a Hand"
align = 1
valign = 1

[node name="Winner" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Winner"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Message"
align = 1
valign = 1

[node name="Button" type="Button" parent="Winner"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 379.0
margin_top = -118.0
margin_right = -379.0
margin_bottom = -78.0
text = "Play Again"

[connection signal="pressed" from="Player1Input/Player1Hand1" to="." method="_on_Player1Hand1_pressed"]
[connection signal="pressed" from="Player1Input/Player1Hand2" to="." method="_on_Player1Hand2_pressed"]
[connection signal="pressed" from="Player2Input/Player2Hand1" to="." method="_on_Player2Hand1_pressed"]
[connection signal="pressed" from="Player2Input/Player2Hand2" to="." method="_on_Player2Hand2_pressed"]
[connection signal="pressed" from="Winner/Button" to="." method="_on_Button_pressed"]
